k8s/mongodb/service.yaml
# k8s/mongodb/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
  namespace: devsecops-app
spec:
  type: ClusterIP
  selector:
    app: mongodb
  ports:
    - port: 27017
      targetPort: 27017
